
  * Various minor fixes
  * Fixed small memory leaks in configurations window
  * Fixed bug #5083 "Remove/hide mnemonics for buttons"
  * Fixed bug #5804 '"Source" should default to "weather.com" if  no other providers available'
  * Fixed bug #5122 "XB-Maemo-Display-Name not used in debian/control"
  * Fixed bug #5086 "Settings > Update > Period: Cropped "4 hours" setting"

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 17 Sep 2009 11:20:10 +0200

omweather (0.24.3) unstable; urgency=low

  * Various minor fixes
  * Fixed bug #4748 "omweather asks me to reboot my device on every update" for Fremantle
  * Updated German translations

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 02 Sep 2009 11:20:10 +0200

omweather (0.24.2) unstable; urgency=low

  * Various minor fixes
  * Fixed bug #4971 ""Wrong station code or ZIP code!!" warning when installing"

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 24 Aug 2009 19:40:10 +0200

omweather (0.24) unstable; urgency=low

  * Updated German, Finish, Spanish, Russian translations
  * Done automatically download the weather forecast after adding of a station, if device is connected to Internet
  * Fixed a problem with gps station choosing
  * Small fixes in popup windows
  * Changed in postinstall script
  * Changed parameter 'type of connection for automatically downloading' by default is WLAN only
  * Changed parameter 'Swap temperature' by default is TRUE
  * Added 'hd_home_plugin_item_set_settings' to widget
  * Various minor fixes

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 20 Aug 2009 19:40:10 +0200

omweather (0.23.4) unstable; urgency=low

  * Fixed the crashing after update deb package

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 11 Aug 2009 18:30:00 +0200

omweather (0.23.3) unstable; urgency=low

  * Modified acknowledgment and copyright lists
  * Various small fixes
  * Fixed memory leaks
  * Corrected behaviour of details weather forecasts for a current day

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 11 Aug 2009 18:30:00 +0200
