@@ -499,7 +499,6 @@ create_icon_widget(GdkPixbuf *icon_buffer, const char *icon_path, int icon_size,
 #ifdef HILDONANIMATION 
     icon_widget = create_hildon_clutter_icon_animation(icon_buffer, icon_path, icon_size, objects_list);
     if (!icon_widget){
-        fprintf(stderr,"dsdddddddddddd\n");
         icon_widget = gtk_image_new_from_pixbuf(icon_buffer);
         g_object_unref(G_OBJECT(icon_buffer));
     }
